testsuite/gna/bug0144/quote1.ref
quote1.vhdl:5:42:error: '"' cannot close a bit string opened by '%'
  constant v : std_logic_vector := b%0_10";
                                         ^
